# thesis

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
analysis/: pyproject.toml
analysis/notebooks/: README.md
analysis/presentation/: Analysis_Presentation.qmd  build_assets.py  custom.scss  render_presentation.sh
analysis/presentation/assets/data/: all_mappings_latest.csv  all_metrics_latest.csv  dataset_summary_latest.csv  method_summary_balanced_latest.csv  method_summary_imbalanced_latest.csv  method_summary_latest.csv
analysis/presentation/assets/snippets/: all_dataset_results_part1.md  all_dataset_results_part2.md  dataset_scope.md  focus_blood_metrics.md  focus_credit_metrics.md  method_summary.md
analysis/scripts/: README_tabarena.md  plotting.py  run_baseline.py  run_haar_monotone.py  run_tabarena_haar_batch.py  run_tabarena_haar_experiment.py  tabarena_dataset_presets.py
data/raw/tabarena/amazon_employee_access/: openml_46905.csv  openml_46905_metadata.json
data/raw/tabarena/apsfailure/: openml_46908_metadata.json
data/raw/tabarena/bank-marketing/: openml_46910.csv  openml_46910_metadata.json
data/raw/tabarena/bank_customer_churn/: openml_46911.csv  openml_46911_metadata.json
data/raw/tabarena/bioresponse/: openml_46912_metadata.json
data/raw/tabarena/blood-transfusion-service-center/: openml_46913_metadata.json
data/raw/tabarena/churn/: openml_46915.csv  openml_46915_metadata.json  openml_46918.csv  (+1 more)
thesis/: _quarto.yml  index.qmd  references.bib
thesis/chapters/: 01-introduction.qmd
(+41 files in other folders)
