[project]
name = "calibration-workspace"
version = "0.1.0"
description = "Monorepo for spline calibration package, analysis, and thesis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["packages/splinecal", "analysis"]

[dependency-groups]
dev = [
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["packages/splinecal/tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
