[project]
name = "calibration-analysis"
version = "0.1.0"
description = "Analysis environment for spline calibration experiments"
requires-python = ">=3.11"
dependencies = [
  "jupyter>=1.0",
  "matplotlib>=3.8",
  "numpy>=1.25",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "splinecal",
]

[tool.uv.sources]
splinecal = { workspace = true }
